--- a/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies-Viet/2023-10-15-Hebrews.md
@@ -60,3 +60,7 @@ Tóm lại, Hê-bơ-rơ 7 làm nổi bật sự quan trọng của Melchizedek v
 ##  [<u>Hebrews 8:1-13</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-08-v01-13-Viet %})
 
 Hebrews 8 bàn về sự ưu việt của giao ước mới được thiết lập bởi Đấng Christ so với giao ước cũ. Nó nhấn mạnh rằng Đấng Christ phục vụ trong vai trò thầy tế cả trên trời, mang lại một giao ước tốt hơn với những lời hứa tốt hơn. Giao ước mới này được đặc trưng bởi mối quan hệ trực tiếp với Đức Chúa Trời, vì luật pháp của Ngài được viết trên trái tim và tâm trí của những người tin. Khác với giao ước cũ, nó hứa hẹn sự tha thứ và sẽ không nhớ đến tội lỗi nữa. Chương này nhấn mạnh những khuyết điểm của giao ước cũ và kết luận rằng giao ước mới, qua Đấng Christ, mở một con đường mới ưu việt và vĩnh cửu để chúng ta được đến gần Chúa.
+
+##  [<u>Hebrews 9:1-28</u>]({{ site.url }}{% post_url bible-studies-Viet/Hebrews/2023-10-15-Hebrews-09-v01-28-Viet %})
+
+Hebrews 9 trình bày về biểu tượng và giới hạn của lều tạm dưới trần thế và các nghi lễ của nó dưới giao ước cũ. Nó mô tả bố trí và đồ nội thất của lều đó, chi tiết về nơi thánh và nơi chí thánh. Chương này nhấn mạnh vào lễ chuộc tội hàng năm, nơi thầy tế lễ cả cử hành những nghi lễ để chuộc tội cho chính mình và những người dân. Các nghi lễ liên quan đến hòm giao ước, bàn thờ và chân đèn vàng được giải thích. Đoạn văn nhấn mạnh vào tính cách tạm thời và biểu tượng của những nghi lễ này, chỉ ra sự cần thiết của một giải pháp hoàn hảo và vĩnh cửu hơn, cuối cùng được thể hiện qua sự hy sinh của Đấng Christ trong đền trên trời.
