--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -60,3 +60,7 @@ Overall, Hebrews 7 underscores the significance of Melchizedek and how Jesus ful
 ##  [<u>Hebrews 8:1-13</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-08-v01-13 %})
 
 Hebrews 8 discusses the superiority of the new covenant established by Jesus compared to the old covenant. It emphasizes that Jesus serves as the high priest in the heavenly tabernacle, offering a better covenant with better promises. This new covenant is characterized by a direct relationship with God, as His laws are written on the hearts and minds of believers. Unlike the old covenant, it promises forgiveness and the remembrance of sins no more. The chapter highlights the flaws of the old covenant and concludes that the new covenant, through Jesus, provides a superior and everlasting way to draw near to God.
+
+##  [<u>Hebrews 9:1-28</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-09-v01-28 %})
+
+Hebrews 9 discusses the symbolism and limitations of the earthly tabernacle and its rituals under the Old Covenant. It describes the layout and furnishings of the tabernacle, detailing the Holy Place and the Most Holy Place. The chapter emphasizes the annual Day of Atonement, where the high priest offered sacrifices for his sins and those of the people. The rituals involving the Ark of the Covenant, the golden altar, and the golden lampstand are explained. The passage underscores the temporary and symbolic nature of these rituals, pointing to the need for a more perfect and eternal solution, ultimately fulfilled in Christ's sacrifice in the heavenly sanctuary.
