--- a/_posts/bible-studies/John/2023-07-02-John-07-v01-53.md
+++ b/_posts/bible-studies/John/2023-07-02-John-07-v01-53.md
@@ -73,11 +73,7 @@ Paul plainly articulated an undeniable truth when he said, *"Flesh and blood can
 <span style="color: rgb(159, 29, 33);">
 <i><sup>37</sup> On the last day of the feast, the greatest day, Jesus stood up and shouted out, "<strong>If anyone is thirsty, let him come to me, and  <sup>38</sup> let the one who believes in me drink. Just as the scripture says, 'From within him will flow rivers of living water</strong>.'"  <sup>39</sup> (Now <strong>he said this about the Spirit, whom those who believed in him were going to receive, for the Spirit had not yet been given, because Jesus was not yet glorified</strong>.)</i></span> (John 7:37-39)
 
-Once more, it's important to understand that Jesus is the sustenance that satisfies your hunger and the source of refreshment for your thirst.
-
-They frequently discuss the Holy Spirit, but to them, He often serves as a means to an end, even if that end is veiled in spiritual language. They treat the Holy Spirit as though He were a metaphysical force that can be summoned through mental effort, akin to the force in the Star Wars universe.
-
-However, the undeniable truth is that the Holy Spirit is bestowed freely as a gift to those who place their faith in the One whom God has sent. He is a person, not a quantity to be dispensed based on the strength of your faith. You either possess Him or you do not; there are no degrees of His presence.
+Once more, it's important to understand that Jesus is the sustenance that satisfies your hunger and the source of refreshment for your thirst. The undeniable truth is that the Holy Spirit is bestowed freely as a gift to those who place their faith in the One whom God has sent. He is a person, not a quantity to be dispensed based on the strength of your faith. You either possess Him or you do not; there are no degrees of His presence.
 
 [(<em>Next study: John 8:1-59</em>)]({{ site.url }}{% post_url bible-studies/John/2023-07-02-John-08-v01-59 %})
 
