--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -64,3 +64,7 @@ Hebrews 8 discusses the superiority of the new covenant established by Jesus com
 ##  [<u>Hebrews 9:1-28</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-09-v01-28 %})
 
 Hebrews 9 discusses the symbolism and limitations of the earthly tabernacle and its rituals under the Old Covenant. It describes the layout and furnishings of the tabernacle, detailing the Holy Place and the Most Holy Place. The chapter emphasizes the annual Day of Atonement, where the high priest offered sacrifices for his sins and those of the people. The rituals involving the Ark of the Covenant, the golden altar, and the golden lampstand are explained. The passage underscores the temporary and symbolic nature of these rituals, pointing to the need for a more perfect and eternal solution, ultimately fulfilled in Christ's sacrifice in the heavenly sanctuary.
+
+##  [<u>Hebrews 10:1-39</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-10-v01-39 %})
+
+Hebrews 10 emphasizes the superiority of Christ's sacrifice under the New Covenant compared to the repeated sacrifices of the Old Covenant. The author highlights that the sacrifices offered year after year cannot perfect those who come to worship. Instead, Christ's sacrifice is presented as a once-for-all offering that effectively takes away sins. The chapter encourages believers to hold firm to their faith, drawing attention to the confidence they have to enter the Most Holy Place through the blood of Jesus. The author warns that sinners can no longer offer sacrifices, so the only acceptable solution is faith in Christ. The chapter concludes with a call to persevere in faith and not shrink back, as the righteous live by faith.
