--- a/_posts/bible-studies-Viet/Hebrews/2023-10-15-Hebrews-10-v01-39-Viet.md
+++ b/_posts/bible-studies-Viet/Hebrews/2023-10-15-Hebrews-10-v01-39-Viet.md
@@ -77,6 +77,6 @@ Bài học quan trọng nhất là bước vào giao ước  mới, nơi tội l
 
 Tác giả Hê-bơ-rơ khích lệ tín hữu nhớ về quá khứ, ***“Hãy nhớ lại những lúc ban đầu đó, anh em đã được soi sáng rồi, bèn chịu cơn chiến trận lớn về những sự đau đớn,”*** nhấn mạnh đến giai đoạn khó khăn họ phải đối mặt sau khi họ được ***"soi sáng,"*** khi họ đón nhận đức tin vào Đấng Christ và rời bỏ hệ thống dâng của lễ của giao ước cũ.
 
-Xung đột này vẫn còn tiếp diễn cho đến ngày nay. Tuy nhiên, tín hữu hiện đại có vẻ ít khả năng nhận thức sự biệt so với những người Hê-bơ-rơ. Một mặt họ thừa nhận sự hy sinh của Christ cho tội lỗi của họ, mặt khác họ vẫn cảm thấy phải dâng những của lễ chuộc tội, hoặc bày tỏ những cử chỉ ăn năn. Nhưng nếu bạn đọc kỹ sách Hê-bơ-rơ, bạn sẽ nhận thức rằng Chúa không chấp nhận sự cùng tồn tại của hai hệ thống này.
+Xung đột này vẫn còn tiếp diễn cho đến ngày nay. Tuy nhiên, tín hữu hiện đại có vẻ ít khả năng nhận thức sự khác biệt so với những người Hê-bơ-rơ. Một mặt họ thừa nhận sự hy sinh của Christ cho tội lỗi của họ, mặt khác họ vẫn cảm thấy phải dâng những của lễ chuộc tội, hoặc bày tỏ những cử chỉ ăn năn. Nhưng nếu bạn đọc kỹ sách Hê-bơ-rơ, bạn sẽ nhận thức rằng Chúa không chấp nhận sự cùng tồn tại của hai hệ thống này.
 
 {% include bible-study/bible-study-footer %}
