--- a/_posts/bible-studies/2023-10-15-Hebrews.md
+++ b/_posts/bible-studies/2023-10-15-Hebrews.md
@@ -68,3 +68,7 @@ Hebrews 9 discusses the symbolism and limitations of the earthly tabernacle and 
 ##  [<u>Hebrews 10:1-39</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-10-v01-39 %})
 
 Hebrews 10 emphasizes the superiority of Christ's sacrifice under the New Covenant compared to the repeated sacrifices of the Old Covenant. The author highlights that the sacrifices offered year after year cannot perfect those who come to worship. Instead, Christ's sacrifice is presented as a once-for-all offering that effectively takes away sins. The chapter encourages believers to hold firm to their faith, drawing attention to the confidence they have to enter the Most Holy Place through the blood of Jesus. The author warns that sinners can no longer offer sacrifices, so the only acceptable solution is faith in Christ. The chapter concludes with a call to persevere in faith and not shrink back, as the righteous live by faith.
+
+##  [<u>Hebrews 11:1-40</u>]({{ site.url }}{% post_url bible-studies/Hebrews/2023-10-15-Hebrews-11-v01-40 %})
+
+Hebrews 11 is often referred to as the "Faith Chapter." In this chapter, the author highlights the exemplary faith of various individuals from the Old Testament. It emphasizes that faith is the assurance of things hoped for and the conviction of things not seen.
