--- a/_posts/bible-studies-Viet/Hebrews/2023-10-15-Hebrews-11-v01-40-Viet.md
+++ b/_posts/bible-studies-Viet/Hebrews/2023-10-15-Hebrews-11-v01-40-Viet.md
@@ -24,7 +24,7 @@ comments_locked: false
 <div>
 <p>
 <img alt src="{{ site.url }}/assets/images/Hebrews-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-    <span style="color: rgb(159, 29, 33);"><i>"<sup>1</sup>Vả, đức tin là sự biết chắc vững vàng của những điều mình đương trông mong là bằng cớ của những điều mình chẳng xem thấy. ... <sup>39</sup>Hết thảy những người đó dầu nhơn đức tin đã được chứng tốt, song chưa hề nhận lãnh điều đã được hứa cho mình. <sup>40</sup>Vì Ðức Chúa Trời có sắm sẵn điều tốt hơn cho chúng ta, hầu cho ngoại chúng ta ra họ không đạt đến sự trọn vẹn được.</i></span> (Hebrews 11:1,39-40)
+    <span style="color: rgb(159, 29, 33);"><i>"<sup>1</sup>Vả, đức tin là sự biết chắc vững vàng của những điều mình đương trông mong là bằng cớ của những điều mình chẳng xem thấy. ... <sup>39</sup>Hết thảy những người đó dầu nhơn đức tin đã được chứng tốt, song <strong>chưa hề nhận lãnh điều đã được hứa cho mình</strong>. <sup>40</sup>Vì Ðức Chúa Trời có sắm sẵn điều tốt hơn cho chúng ta, hầu cho ngoại chúng ta ra họ không đạt đến sự trọn vẹn được.</i></span> (Hebrews 11:1,39-40)
     </p>
 </div>
 
